--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -5,7 +5,7 @@
   left: 0;
   flex: 0 0 320px;
   height: 100%;
-  background-color: #ffffff;
+  background-color: $color-active-hover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -54,7 +54,7 @@
 
 .menu__item {
   font-size: 16px;
-  color: #1b1c21;
+  color: $color-text;
   cursor: pointer;
   background: none;
   border: none;
@@ -65,7 +65,7 @@
 
 .menu__item--active {
   animation: pulse 2s infinite;
-  color: #7e7e82;
+  color: $color-gray;
   position: relative;
 }
 
@@ -76,7 +76,7 @@
   top: 0;
   bottom: 0;
   width: 4px;
-  background-color: #41f6d7;
+  background-color: $color-light-green;
 }
 
 /* ================== SIDE MENU FOOTER ================== */
@@ -92,7 +92,7 @@
 }
 
 .menu__action {
-  background: #ff3e79;
+  background: $color-pink;
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -105,21 +105,21 @@
 
 .menu__email {
   font-size: 14px;
-  color: #1b1c21;
+  color: $color-text;
   text-decoration: none;
 }
 
 .menu__phone {
   font-size: 24px;
   font-weight: bold;
-  color: #1b1c21;
+  color: $color-text;
 }
 
 .menu__lang {
   display: flex;
   gap: 8px;
   font-size: 12px;
-  color: #7e7e82;
+  color: $color-gray;
 }
 
 /* ================== MEDIA QUERIES ================== */
