--- a/src/styles/blocks/_reset.scss
+++ b/src/styles/blocks/_reset.scss
@@ -10,7 +10,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "TT Lakes", sans-serif;
-  background-color: #f8f8f8;
-  color: #1b1c21;
+  font-family: $font-main;
+  background-color: $color-header-bg;
+  color: $color-text;
 }
