--- a/src/styles/blocks/_variables.scss
+++ b/src/styles/blocks/_variables.scss
@@ -1,8 +1,11 @@
-$color-bg: #f8f8f8;
-$color-accent: #41f6d7;
+$color-header-bg: #f8f8f8;
+$color-light-green: #41f6d7;
 $color-text: #1b1c21;
+$color-black: #000;
 $color-gray: #7e7e82;
 $color-pink: #ff3e79;
-$color-border: #eaeaea;
+$color-light-grey: #eaeaea;
+$color-scroll-hover: #e0fff6;
+$color-active-hover: #ffffff;
 
 $font-main: "TT Lakes", sans-serif;
