--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -75,7 +75,7 @@
 /* Mobile (<767px) */
 @media (max-width: 767px) {
   .header {
-    background-color: $color-header-bg;
+    background-color: $color-active-hover;
     border-bottom: 1px solid $color-light-green;
   }
 
@@ -106,7 +106,7 @@
 /* Tablets (768px–1119px) */
 @media (min-width: 768px) and (max-width: 1119px) {
   .header {
-    background-color: $color-header-bg;
+    background-color: $color-active-hover;
     border-bottom: 1px solid $color-light-green;
   }
 
