brands and swiper added

--- a/src/styles/blocks/_layout.scss
+++ b/src/styles/blocks/_layout.scss
@@ -9,6 +9,10 @@
   padding: 32px;
 }
 
+.services_brands {
+  padding: 16px;
+}
+
 /* ================== MEDIA QUERIES ================== */
 /* Mobile (<767px) */
 @media (max-width: 767px) {
