--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -4,7 +4,8 @@
   top: 0;
   left: 0;
   flex: 0 0 320px;
-  height: 100%;
+  min-height: 100vh;
+  //height: 100%;
   background-color: $color-active-hover;
   display: flex;
   flex-direction: column;
@@ -13,6 +14,7 @@
   box-shadow: 20px 0 30px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   display: none;
+  overflow-y: auto;
 
   &.menu--hidden {
     display: none;
@@ -24,6 +26,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    height: 100vh;
     display: flex;
   }
 
@@ -51,6 +54,8 @@
 
   &__nav {
     flex-grow: 1;
+    overflow-y: auto;
+    min-height: 0;
   }
 
   &__list {
@@ -138,6 +143,7 @@
   .menu {
     &.menu--open {
       width: 100%;
+      height: 100vh;
     }
   }
 }
@@ -147,6 +153,7 @@
   .menu {
     &.menu--open {
       width: 320px;
+      height: 100vh;
     }
   }
 }
@@ -156,6 +163,7 @@
   .menu {
     display: flex !important;
     flex-direction: column;
+    min-height: 100vh;
   }
 
   .menu--hidden {
