--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,6 +1,7 @@
 /* ================== SIDE MENU ================== */
 .menu {
-  position: relative;
+  position: fixed;
+  //position: relative;
   top: 0;
   left: 0;
   flex: 0 0 320px;
@@ -24,9 +25,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    height: 100vh;
+    // width: 100%;
+    // height: 100%;
+    // height: 100vh;
     display: flex;
   }
 
@@ -135,6 +136,10 @@
   font-size: 12px;
   color: $color-gray;
 }
+/* ================== OVERLAY ================== */
+.overlay {
+  display: none;
+}
 
 /* ================== MEDIA QUERIES ================== */
 
@@ -156,6 +161,23 @@
       height: 100vh;
     }
   }
+  /* ================== OVERLAY ================== */
+  .overlay {
+    //display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    transition: opacity 0.3s ease;
+
+    &.overlay--active {
+      display: block;
+      opacity: 1;
+    }
+  }
 }
 
 /* Desktop (>=1120px) */
@@ -163,7 +185,9 @@
   .menu {
     display: flex !important;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 700px;
+    overflow: auto;
   }
 
   .menu--hidden {
@@ -181,24 +205,6 @@
   }
 
   .menu__logo {
-    margin-left: -60px;
-  }
-}
-
-/* ================== OVERLAY ================== */
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  transition: opacity 0.3s ease;
-
-  &.overlay--active {
-    display: block;
-    opacity: 1;
+    margin-left: -30px;
   }
 }
