--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -18,6 +18,10 @@
 }
 }
 
+.services_brands__container {
+  padding: 24px 16px;
+}
+
 /* ================== "Читать далее" BUTTON ================== */
 .services__link {
   display: inline-flex;
@@ -66,6 +70,7 @@
     height: auto;
     display: block;
   }
+  
 }
 
 /* Tablets (768px–1119px) */
