--- a/src/styles/blocks/_media.scss
+++ b/src/styles/blocks/_media.scss
@@ -1,3 +1,11 @@
+.text {
+  &--mobile,
+  &--tablet,
+  &--desktop {
+    display: none;
+  }
+}
+
 /* ================== MEDIA QUERIES ================== */
 /* Mobile (<767px) */
 @media (max-width: 767px) {
