--- a/src/styles/blocks/_variables.scss
+++ b/src/styles/blocks/_variables.scss
@@ -1,10 +1,10 @@
-$color-header-bg: #f8f8f8;
-$color-light-green: #41f6d7;
-$color-text: #1b1c21;
-$color-gray: #7e7e82;
-$color-pink: #ff3e79;
-$color-light-grey: #eaeaea;
-$color-scroll-hover: #e0fff6;
-$color-active-hover: #ffffff;
+$color-off-white: #f8f8f8;
+$color-aqua-green: #41f6d7;
+$color-dark-charcoal: #1b1c21;
+$color-medium-gray: #7e7e82;
+$color-vivid-pink: #ff3e79;
+$color-pale-gray: #eaeaea;
+$color-mint-white: #e0fff6;
+$color-pure-white: #ffffff;
 
 $font-main: "TT Lakes", sans-serif;
