--- a/src/styles/blocks/_reset.scss
+++ b/src/styles/blocks/_reset.scss
@@ -11,6 +11,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: $font-main;
-  background-color: $color-header-bg;
-  color: $color-text;
+  background-color: $color-off-white;
+  color: $color-dark-charcoal;
+}
+
+body,
+button,
+input,
+textarea,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+a {
+  font-family: "TT Lakes", sans-serif;
 }
