--- a/src/styles/blocks/_layout.scss
+++ b/src/styles/blocks/_layout.scss
@@ -13,6 +13,10 @@
   padding: 16px 0px;
 }
 
+.services_types {
+  padding: 16px 0px;
+}
+
 /* ================== MEDIA QUERIES ================== */
 /* Mobile (<767px) */
 @media (max-width: 767px) {
