--- a/src/styles/blocks/_services_types.scss
+++ b/src/styles/blocks/_services_types.scss
@@ -43,14 +43,23 @@
     box-shadow: none;
   }
 
-  &__container {
-    padding: 24px 16px;
+  &__text {
+    margin: 16px 0 0 16px;
+    padding: 0; 
+    align-self: flex-start; 
   }
 
   &__arrow {
     width: 40px;
     height: 40px;
     flex-shrink: 0;
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
+  }
+
+  .services_types__container {
+    padding: 24px 16px;
   }
 }
 /* ================== TYPES ITEM ================== */
@@ -64,7 +73,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 16px;
+  //padding: 0 16px;
+  padding: 0px;
   box-sizing: border-box;
   cursor: pointer;
 }
