servies proces added

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,4 @@
 @import './blocks/services';
 @import './blocks/services_brands';
 @import './blocks/services_types';
+@import './blocks/services_prices';
