--- a/src/styles/blocks/_layout.scss
+++ b/src/styles/blocks/_layout.scss
@@ -16,6 +16,9 @@
 .services_types {
   padding: 16px 0px;
 }
+.services_prices {
+  padding: 16px 0px;
+}
 
 /* ================== MEDIA QUERIES ================== */
 /* Mobile (<767px) */
